Resolves: fdo#87636 New button not clickable when Templates preselected

regression from

commit 57207cab004cb78c3fa6d9ed43cc4bf81f4e6981
Author: Ariel Constenla-Haile <arielch@apache.org>
Date:   Tue May 28 10:01:32 2013 +0000

    Add missing copy&paste of SfxAppToolBoxControl_Impl::Select

    (cherry picked from commit 47204c74d9e52f54f6983af19b66af2a96b42e61)

    Conflicts:
        framework/inc/uielement/popuptoolbarcontroller.hxx
        svtools/inc/svtools/toolboxcontroller.hxx

The menu shown in the ui is a copy of a menu. The original menu has UserData
set on it which contains the target for the command, but the copy doesn't, so
looking up the target always fails and ses the "_default" frame and not the
correct "_self" required for the template menu

Change-Id: Ic1887467bf15f081d27286bd284929c17a2b19ad